--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3067,12 +3067,16 @@ input, select, textarea {
 				opacity: 1;
 			}
 
-		.spotlights > section:nth-child(2) {
+		.spotlights > section:nth-child(1) {
 			background-color: rgba(0, 0, 0, 0.05);
 		}
 
+		.spotlights > section:nth-child(2) {
+			background-color: rgba(0, 0, 0, 0.0675);
+		}
+
 		.spotlights > section:nth-child(3) {
-			background-color: rgba(0, 0, 0, 0.1);
+			background-color: rgba(0, 0, 0, 0.075);
 		}
 
 		.spotlights > section.inactive > .image:before,
@@ -3916,3 +3920,4 @@ input, select, textarea {
 		}
 
 /* Some much needed CUSTOM CSS */
+
