--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2592,11 +2592,31 @@ input, select, textarea {
 			width: 15%;
 		}
 
+		@media screen and (max-width: 736px) {
+
+			.image.left.trixpicafirst {
+				width: 100%;
+				height: 50vh;
+				display: block;
+			}
+
+		}
+
 		.image.right.trixpicasecond {
 			float: right;
 			margin: 0 0 1em 1.5em;
 			top: 0.25em;
 			width: 15%;
+		}
+
+		@media screen and (max-width: 736px) {
+
+			.image.right.trixpicasecond {
+				display: block;
+				width: 100%;
+				height: 50vh;
+			}
+
 		}
 
 		.image.left {
